Keep compatibility with Java 8
Commit 578e8d2 broke Java 8 compat